comments added for clarity

--- a/JHMovies/Views/Home/Podcasts.cshtml
+++ b/JHMovies/Views/Home/Podcasts.cshtml
@@ -9,6 +9,8 @@
 
 <div class="text-center">
     <h1 class="display-4">My Podcasts</h1>
+
+    @*I decided to put in in an iframe because that looks better than a page with just a link on it.*@
     <iframe src=" https://baconsale.com/"
             style="width:100%; height:500px" frameborder="0"
             allowfullscreen>
@@ -18,4 +20,5 @@
             </a>
         </p>
     </iframe>
+    <a href="https://baconsale.com/">Fallback link</a>
 </div>
