--- a/JHMovies/Views/Home/Entry.cshtml
+++ b/JHMovies/Views/Home/Entry.cshtml
@@ -22,10 +22,10 @@
         <label asp-for="Rating">Rating</label>
         <select asp-for="Rating">
             <option value="">--Select One--</option>
-            <option value="'G">G</option>
-            <option value="'PG">PG</option>
-            <option value="'PG-13">PG-13</option>
-            <option value="'R">R</option>
+            <option value="G">G</option>
+            <option value="PG">PG</option>
+            <option value="PG-13">PG-13</option>
+            <option value="R">R</option>
         </select><br /> <br />
         <label asp-for="Category">Category</label>
         <input asp-for="Category" /><br /> <br />
@@ -41,8 +41,6 @@
         <input asp-for="Notes" /><br /> <br />
         <label asp-for="Edited">Edited</label>
         <select asp-for="Edited">
-            <br />
-            <br />
             <option value="null">--Select One--</option>
             <option value="true">Yes</option>
             <option value="false">No</option>
