--- a/JHMovies/Views/Home/Entry.cshtml
+++ b/JHMovies/Views/Home/Entry.cshtml
@@ -18,34 +18,72 @@
 <div class="text-center">
     <h1 class="display-4">Movie Entry</h1>
     @*this is a form, people enter information into forms*@
-    <form asp-action="Entry" method="post">
-        <label asp-for="Rating">Rating</label>
-        <select asp-for="Rating">
-            <option value="">--Select One--</option>
-            <option value="G">G</option>
-            <option value="PG">PG</option>
-            <option value="PG-13">PG-13</option>
-            <option value="R">R</option>
-        </select><br /> <br />
-        <label asp-for="Category">Category</label>
-        <input asp-for="Category" /><br /> <br />
-        <label asp-for="Title">Title</label>
-        <input asp-for="Title" /><br /> <br />
-        <label asp-for="Year">Year</label>
-        <input asp-for="Year" /><br /> <br />
-        <label asp-for="Director">Director</label>
-        <input asp-for="Director" /><br /> <br />
-        <label asp-for="LentTo">LentTo</label>
-        <input asp-for="LentTo" /><br /> <br />
-        <label asp-for="Notes">Notes</label>
-        <input asp-for="Notes" /><br /> <br />
-        <label asp-for="Edited">Edited</label>
-        <select asp-for="Edited">
-            <option value="null">--Select One--</option>
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select><br /> <br />
-        <button type="submit">Enter Movie</button><br /> <br />
-        <div asp-validation-summary="All"></div>
-    </form>
+
+    @if (Model != null)
+    {
+        <form asp-action="Entry" method="post">
+            <label asp-for="Rating">Rating</label>
+            <select asp-for="Rating" value=@Model.Rating>
+                <option value="">--Select One--</option>
+                <option value="G">G</option>
+                <option value="PG">PG</option>
+                <option value="PG-13">PG-13</option>
+                <option value="R">R</option>
+            </select><br /> <br />
+            <label asp-for="Category">Category</label>
+            <input asp-for="Category" value=@Model.Category /><br /> <br />
+            <label asp-for="Title">Title</label>
+            <input asp-for="Title" value=@Model.Title /><br /> <br />
+            <label asp-for="Year">Year</label>
+            <input asp-for="Year" value=@Model.Year /><br /> <br />
+            <label asp-for="Director">Director</label>
+            <input asp-for="Director" value=@Model.Director /><br /> <br />
+            <label asp-for="LentTo">Lent To</label>
+            <input asp-for="LentTo" value=@Model.LentTo /><br /> <br />
+            <label asp-for="Notes">Notes</label>
+            <input asp-for="Notes" value=@Model.Notes /><br /> <br />
+            <label asp-for="Edited">Edited</label>
+            <select asp-for="Edited" value=@Model.Edited>
+                <option value="null">--Select One--</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select><br /> <br />
+            <input type="hidden" name="movieId" value=@Model.MovieID>
+            <button type="submit">Enter Movie</button><br /> <br />
+            <div asp-validation-summary="All"></div>
+        </form>
+    }
+    else
+    {
+        <form asp-action="Entry" method="post">
+            <label asp-for="Rating">Rating</label>
+            <select asp-for="Rating" >
+                <option value="">--Select One--</option>
+                <option value="G">G</option>
+                <option value="PG">PG</option>
+                <option value="PG-13">PG-13</option>
+                <option value="R">R</option>
+            </select><br /> <br />
+            <label asp-for="Category">Category</label>
+            <input asp-for="Category"  /><br /> <br />
+            <label asp-for="Title">Title</label>
+            <input asp-for="Title"  /><br /> <br />
+            <label asp-for="Year">Year</label>
+            <input asp-for="Year" /><br /> <br />
+            <label asp-for="Director">Director</label>
+            <input asp-for="Director"/><br /> <br />
+            <label asp-for="LentTo">Lent To</label>
+            <input asp-for="LentTo" /><br /> <br />
+            <label asp-for="Notes">Notes</label>
+            <input asp-for="Notes" /><br /> <br />
+            <label asp-for="Edited">Edited</label>
+            <select asp-for="Edited">
+                <option value="null">--Select One--</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select><br /> <br />
+            <button type="submit">Enter Movie</button><br /> <br />
+            <div asp-validation-summary="All"></div>
+        </form>
+    }
 </div>
